<resources>
    <string name="app_name">Healthy Work</string>
    <string name="sample_text">Sample text</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_name" translatable="false">Healthy work</string>
    <string name="channel_description" translatable="false">Healthy work notification for chanel</string>


    <!--start activity_main & to_do -->
    <string name="activity_main_until_the_next_exercise">Next time:</string>
    <string name="activity_main_start">Start</string>
    <string name="activity_main_stop">Stop</string>
    <string name="activity_main_current_exercise">Current exercise:</string>
    <string name="activity_main_next_exercise">Next exercise:</string>
    <string name="activity_main_performed">Performed:</string>
    <string name="activity_main_missed">Missed:</string>
    <string name="activity_main_settings">Settings</string>
    <string name="activity_main_exercises">Exercises</string>
    <string name="activity_main_exercises_list">List of exercises</string>
    <string name="activity_main_schedules">Schedules</string>
    <string name="activity_main_exit_message">Press again to exit.</string>
    <string name="activity_main_change_exercise">Change exercise</string>
    <!--end activity_main & to_do  -->

    <!--start activity_exercise  -->
    <string name="activity_exercise_title">Exercise:</string>
    <string name="activity_exercise_units">Units:</string>
    <string name="activity_exercise_units_hint">Units of the exercise</string>
    <string name="activity_exercise_count">Counts:</string>
    <string name="activity_exercise_count_hint">Counts</string>
    <string name="activity_exercise_name">Name of the exercise</string>
    <string name="activity_exercise_save">Save</string>
    <string name="activity_exercise_description">Description</string>
    <string name="activity_exercise_description_hint">Description of the exercise</string>
    <string name="activity_exercise_available">Available:</string>
    <string name="activity_exercise_new">New exercise</string>
    <string name="activity_exercise_back">Go back</string>
    <string name="activity_exercise_unit_times">Times</string>
    <string name="activity_exercise_unit_seconds">Seconds</string>
    <string name="activity_exercise_delete_message">Are you sure you want to remove this exercise?</string>
    <string name="activity_exercise_delete">Remove</string>
    <string name="activity_exercise_delete_complete_message">Data deleted</string>
    <string-array name="activity_exercise_units_array">
        <item>@string/activity_exercise_unit_times</item>
        <item>@string/activity_exercise_unit_seconds</item>
    </string-array>
    <!--end activity_exercise   -->

    <!--start activity_exercises_menu  -->
    <string name="activity_exercises_menu_title">Exercises:</string>
    <string name="activity_exercises_menu_back">Go back</string>
    <string name="activity_exercises_menu_add">New exercise</string>
    <!--end activity_exercise   -->

    <!--start activity_preferences  -->
    <string name="activity_preferences_filename">preferences</string>
    <string name="activity_preferences_back">Go back</string>
    <string name="activity_preferences_period">Period, mm:</string>
    <string name="activity_preferences_countdown_start">Countdown start, mm:</string>
    <string name="activity_preferences_save">Save</string>
    <string name="activity_preferences_hour">60</string>
    <string name="activity_preferences_half_hour">30</string>
    <string name="activity_preferences_title">Preferences</string>
    <string name="activity_preferences_save_message">Settings was saved</string>
    <!--end activity_preferences   -->

    <!--start activity_schedule  -->
    <string name="activity_schedule_title">Schedule</string>
    <string name="activity_schedule_back">Go back</string>
    <string name="activity_schedule_switch">Enable Graph</string>
    <string name="activity_schedule_enable">Enable schedule</string>
    <string name="activity_schedule_days_of_week">Days of week</string>
    <string name="activity_schedule_on">ON</string>
    <string name="activity_schedule_off">OFF</string>
    <string name="activity_schedule_su">Su</string>
    <string name="activity_schedule_mo">Mo</string>
    <string name="activity_schedule_tu">Tu</string>
    <string name="activity_schedule_we">We</string>
    <string name="activity_schedule_th">Th</string>
    <string name="activity_schedule_fr">Fr</string>
    <string name="activity_schedule_sa">Sa</string>
    <string name="activity_schedule_start_day">The beginning time</string>
    <string name="activity_schedule_end_day">The end time</string>
    <string name="activity_schedule_recess">Enable recess</string>
    <string name="activity_schedule_start_recess">Start of the recess</string>
    <string name="activity_schedule_end_recess">End of the recess</string>
    <string name="activity_schedule_save">Save</string>
    <string name="activity_schedule_save_message">Schedule was saved</string>
    <string name="activity_schedule_save_error_question"> Do you want to exit without saving?</string>
    <string name="activity_schedule_save_error_day_of_week"> No day selected. </string>
    <string name="activity_schedule_save_wrong_day_time"> Wrong business time. </string>
    <string name="activity_schedule_save_wrong_break_time">  Wrong break time. </string>

    <!--end activity_schedule   -->

    <!--start activity_preferences  -->
    <string name="activity_to_do_title">Lets go!</string>
    <string name="activity_to_do_exercise">Some exercise</string>
    <string name="activity_to_do_exercise_count">A few exercises</string>
    <string name="activity_to_do_save">Save</string>
    <string name="activity_to_do_positive" translatable="false">ОК!</string>
    <string name="activity_to_do_negative">Skip</string>
    <string name="activity_to_do_exit">Close</string>
    <string name="activity_to_do_already_done">Already done:</string>
    <!--end activity_preferences   -->

    <!--start notifications  -->
    <string name="notification_title">Lets go!</string>
    <string name="notification_coming_soon">Coming soon</string>
    <string name="notification_skip_one">Skip one</string>
    <string name="notification_save">Save</string>
    <string name="notification_positive">I\'m going to fulfill</string>
    <string name="notification_negative">Skip</string>
    <string name="notification_exit">Close</string>
    <string name="notification_already_done">Already done:</string>
    <string name="notification_content_text_start">It\'s Time to perform: </string>

    <!--end notifications   -->

    <!--start dialog  -->
    <string name="dialog_save_changes">Save changes before exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <!--end dialog   -->

    <!--start demo data  -->
    <string name="demo_data_exercise_name_default">New Exercise</string>
    <string name="demo_data_exercise_descrixzption_default">"Your description"</string>
    <string name="demo_data_exercise_count_default">10</string>


    <string name="demo_data_unit_times">@string/activity_exercise_unit_times</string>
    <string name="demo_data_unit_seconds">@string/activity_exercise_unit_seconds</string>
    <string name="demo_data_exercise_name_1">Push-Ups</string>
    <string name="demo_data_exercise_name_2">Squats</string>
    <string name="demo_data_exercise_name_3">Pull-Ups</string>
    <string name="demo_data_exercise_name_4">Plank</string>
    <string name="demo_data_exercise_name_5">Eye Exercises</string>
    <string name="demo_data_exercise_name_6">Scapular wall slides</string>
    <string name="demo_data_exercise_description_1">
        "Your hands slightly wider than your shoulders.
        Inhale as you slowly bend your elbows and lower yourself to the floor, until your elbows
        are at a 90-degree angle. Exhale while contracting your chest muscles and pushing back up
        through your hands, returning to the start position.Keep your body in a straight line from
        head to toe without sagging in the middle or arching your back. "
    </string>
    <string name="demo_data_exercise_description_2">
        Stand straight with feet hip-width apart. Bend
        your knees while keeping your upper body as straight as possible. Lower yourself as far as
        you can without leaning your upper body too much. Keep your heels "glued" to the floor.
        You can tretch your arms out in front of you for added balance.
    </string>
    <string name="demo_data_exercise_description_3">
        Place your hands in an overhand grip (palms
        facing away from your body) with your hands slightly further than shoulder-width apart.
        Pull your shoulders back and down. Engaging the muscles in your arms and back, bend your
        elbows and raise your upper body up toward the bar until your chin is over the bar. At the
        top of the movement, inhale. Then extend your elbows and lower your body back down to the
        starting position.
    </string>
    <string name="demo_data_exercise_description_4">
        Stack your elbows directly beneath your shoulders and extend your legs. Rest your weight
        on your elbows and your toes. Your back should form a straight line. Don\'t let your pelvis
        dip down or your butt to rise up. Face your gaze face down, which keeps your neck in a
        neutral position.
    </string>
    <string name="demo_data_exercise_description_5">
        Figure eight. Imagine a big number 8 turned on its side. Slowly sketch it with your eyes
        several times. Then go the other direction. Hold your thumb about 10 inches from your face
        and focus on it for 5-10 seconds.Find an object roughly 10 to 20 feet away, and focus on it
        for 5-10 seconds. Return your focus to your thumb.
    </string>
    <string name="demo_data_exercise_description_6">
        Stand with your back against a wal. Make sure your head, upper back, and glutes are in
        contact with the wall. Bend the elbows to 90 degrees, while keeping arms against the wall.
        This is the starting position. Slowly slide your arms up the wall as high as you can go
        without your back, shoulders, elbows, or wrists coming off the wall.Slowly lower your
        arms by sliding them down the wall to the starting position.
    </string>
    <!--end demo data   -->



</resources>